--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                C198 148 194 144 190 144Z" fill="#ff7aa2"></path>
     </svg>
 
-    <h1>فنو هل تكونين ماي فلنتاين؟ </h1>
+    <h1>would you cum 7 times with me baby girl?</h1>
 
     <section class="button-zone" id="zone">
       <button id="yesBtn" style="transform: translateY(-50%) scale(2.2);">Yes</button>
